# tinysys-sys

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  fetch_tinysys_sdk.sh  update_c_sdk.sh  update_rs.sh
.cargo/: config.toml
c_sdk/: git-HEAD.txt  objdump_libtinysys_sdk.txt  update_sdk.sh
scripts/: 01-update_c_sdk.sh  02-build_c_sdk.sh  03-update_rs.sh  all.sh
src/: instructions.rs  lib.rs  printing.rs  sdk.rs
src/include/: sdk.h  wrapper.h
tinysys_c_sdk/: .gitignore  Makefile  git-HEAD.txt  objdump-demangle.txt  objdump.txt  objdump_libtinysys_sdk.txt  update_sdk.sh
