[package]
name = "tinysys_sys"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
default = ["alloc", "malloc_free"]
malloc_free = ["alloc"]
alloc = []
# This is only used for running bindgen from the build.rs
bindgen = ["dep:walkdir", "dep:bindgen"]

[dependencies]

[build-dependencies]
bindgen = { version = "0.71", optional = true }
walkdir = { version = "2", optional = true }
